tests/src/frontend/syntax/invalid/array_set.sk
fun main(): void {
  v = Vec ["Hello"];
  v[0] = " world!";
  print_raw(v[0])
}
